# rg-prep

./: .gitignore  .pre-commit-config.yaml  compose.yaml  raw_score_converter.py
.github/workflows/: ci.yml
question-generator/: .gitignore
question-generator/apps/api/: README.md  alembic.ini  pyproject.toml
question-generator/apps/api/alembic/: env.py
question-generator/apps/api/alembic/versions/: 21ebdfcbfac5_add_pages_table.py
question-generator/apps/api/app/: __init__.py
question-generator/apps/api/app/core/: settings.py
question-generator/apps/api/app/db/: core.py
question-generator/apps/api/app/db/models/: page.py  question.py
question-generator/apps/api/app/ingestion/: act_parser.py  pdf_parser.py
question-generator/apps/api/app/scripts/: ingest_batch.py
question-generator/apps/api/tests/: test_db_core.py
