[project]
name = "question-generator-api"
version = "0.1.0"
description = "ACT/SAT question generator API"
authors = [
    {name = "Ethan Rodgers-Gates",email = "erodgersgates@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pymupdf (>=1.26.7,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
